--- a/index.html
+++ b/index.html
@@ -511,6 +511,13 @@
                                 <article>
                                     <b>Template Form Authorization</b>
                                     <p>Web design & using Html Css & Bootstrap 5</p>
+
+                                    <div class="skill-tags">
+                                        <div class="skill-tag"><i class="fa-brands fa-html5"></i> HTML5</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-css3-alt"></i> CSS3</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-js"></i> JavaScript</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-bootstrap"></i> Bootstrap 5</div>
+                                    </div>
                                 </article>
                             </div>
                         </div>
@@ -538,6 +545,12 @@
                                 <article>
                                     <b>Manage System Higher-secondary-education</b>
                                     <p>Web design & using Html Css & Boostrap 5</p>
+                                    <div class="skill-tags">
+                                        <div class="skill-tag"><i class="fa-brands fa-html5"></i> HTML5</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-css3-alt"></i> CSS3</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-js"></i> JavaScript</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-bootstrap"></i> Bootstrap 5</div>
+                                    </div>
                                 </article>
                             </div>
                         </div>
@@ -560,6 +573,12 @@
                                 <article>
                                     <b>PHP System use write object-oriented</b>
                                     <p>Web design & using Html Css & Bootsrtap 5</p>
+                                    <div class="skill-tags">
+                                        <div class="skill-tag"><i class="fa-brands fa-html5"></i> HTML5</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-css3-alt"></i> CSS3</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-js"></i> JavaScript</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-bootstrap"></i> Bootstrap 5</div>
+                                    </div>
                                 </article>
                             </div>
                         </div>  
@@ -582,6 +601,10 @@
                                 <article>
                                     <b>Template Calculate</b>
                                     <p>Web design & using Html Css</p>
+                                    <div class="skill-tags">
+                                        <div class="skill-tag"><i class="fa-brands fa-html5"></i> HTML5</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-css3-alt"></i> CSS3</div>
+                                    </div>
                                 </article>
                             </div>
                         </div>          
@@ -607,6 +630,13 @@
                                 <article>
                                     <b>E-commerce Website</b>
                                     <p>Using Html Css Javascript Jquery Php Laravel & boostrap 5 Developing 2025 with team // Comming Soon</p>
+                                    <div class="skill-tags">
+                                        <div class="skill-tag"><i class="fa-brands fa-html5"></i> HTML5</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-css3-alt"></i> CSS3</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-js"></i> JavaScript</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-js"></i> Laravel</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-bootstrap"></i> Bootstrap 5</div>
+                                    </div>
                                 </article>
                             </div>
                         </div>
@@ -630,6 +660,10 @@
                                 <article>
                                     <b>Template CV</b>
                                     <p>Using Html Css and Tailwind Css 4.1</p>
+                                    <div class="skill-tags">
+                                        <div class="skill-tag"><i class="fa-brands fa-html5"></i> HTML5</div>
+                                        <div class="skill-tag"><i class="fa-brands fa-html5"></i> Tailwind Css 4.1</div>
+                                    </div>
                                 </article>
                             </div>
                         </div>
@@ -639,33 +673,6 @@
             </div>
 
             <!-- Other system use software Aceess -->
-            <div class="project-content">
-                <div class="project-card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
-                    <div class="title-product text-center">
-                        <div class="image-slider">
-                            <img src="image/iamge_project/Access/access.png" alt="Project">
-                            <img src="image/iamge_project/Access/access-1.png" alt="Project">
-                            <img src="image/iamge_project/Access/access-2.png" alt="Project">
-                            <img src="image/iamge_project/Access/access-3.png" alt="Project">
-                            <img src="image/iamge_project/Access/access-4.png" alt="Project">
-                            <img src="image/iamge_project/Access/access-5.png" alt="Project">
-                            <img src="image/iamge_project/Access/access-6.png" alt="Project">
-    
-                            <!-- Navigation Buttons -->
-                            <button class="prev" onclick="prevSlide()"><i class='bx bx-chevron-left' ></i></button>
-                            <button class="next" onclick="nextSlide()"><i class='bx bx-chevron-right'></i></button>
-                        </div>
-                        <div class="text-product">
-                            <div class="d-flex justify-content-center align-items-center">
-                                <article>
-                                    <b>Manage System Higher-secondary-education</b>
-                                    <p>Using software Access Out project Practice</p>
-                                </article>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             
         </section>
 
